@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.517 2024/06/22 16:48:51 nanard Exp $
+$Id: Changelog.txt,v 1.518 2024/06/22 22:30:01 nanard Exp $
+
+2024/07/11:
+  PCP: Check nonce when renewing IPv6 pinhole
 
 VERSION 2.3.7 : released on 2024/06/22
 
